--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "js-yaml": "^4.1.0",
     "mongoose": "^8.8.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "yaml": "^2.6.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
